Fri Dec 31 11:05:11 2010  Michal Jaegermann  <michal@harddata.com>

	* awk.h (strncasecmpmbs): Change parameters to const char *.
	* builtin.c (strncasecmpmbs): Change parameters to const char *.
	Add casts as appropriate in calls to other functions.
	* eval.c (cmp_nodes): Add casts in calls to strncasecmpmbs.
	* node.c (str2wstr): Ditto.

Tue Dec 28 21:13:31 2010  Eli Zaretskii  <eliz@gnu.org>

	* gawkmisc.c: Restore inclusion of pc/gawkmisc.pc.

Tue Dec 28 21:00:36 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* ext.c (make_builtin): Make first parameter const char *.
	Adjust code inside to fit.
	* awk.h (make_builtin): Adjust declaration.

Mon Dec 27 19:55:10 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* io.c [AF_UNSPEC, AF_INET, AF_INET6]: Add definitions for systems
	that don't define them.
	(inetfile): Make IPv6 a fatal error if using the fake getaddrinfo,
	since chances are good that IPv6 really isn't available.

Sat Dec 25 19:36:27 2010  Arnold D. Robbins  <arnold@skeeve.com>

	Fixes for z/OS.

	* awkgram.y (tokcompare): Change argument types to const void *.
	(check_special): Add cast to void * in call to qsort.
	* builtin.c (do_bindtextdomain): Change `directory' and `domain'
	to const char *.
	* custom.h (ZOS_USS): Undef HAVE_SYS_PARAM_H and HAVE_MCHECK_H.
	Beats me why configure thinks it has those things.

Fri Dec 24 12:56:46 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* custom.h: Remove defs for RIPS MiscOS.
	* configure.ac, aclocal.m4: Updated to Autoconf 2.68.

Wed Dec 22 21:21:28 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* gettext.h: Synchronized with gettext 0.18.1.

2010-12-22  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.18.1.
	* ABOUT-NLS, config.rpath: Updated from gettext 0.18.1.

Sun Dec 19 16:43:14 2010  Arnold D. Robbins  <arnold@skeeve.com>

	* awk.h (update_PROCINFO_str, update_PROCINFO_num, make_str_node):
	Change `char *' parameters to `const char *' to avoid some