@@ -1,3 +1,7 @@
+Tue Jan  4 11:09:43 2011  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* readline.m4: Really fixed to work correctly with Autoconf 2.68.
+
 Sat Dec 25 21:40:25 2010  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* readline.m4: Fixed to work correctly with Autoconf 2.68.
