@@ -1,3 +1,8 @@
+Tue Jan  4 11:20:40 2011  Arnold Robbins  <arnold@skeeve.com>
+
+	* config.h: Add PIPES_SIMULATED and definition of _NFILE for
+	DJGPP.
+
 Sat Dec 18 22:12:42 2010  Arnold Robbins  <arnold@skeeve.com>
 
 	* gawkw32.def: Removed.
