@@ -1,3 +1,12 @@
+Tue Jan  4 11:21:18 2011  Arnold D. Robbins  <arnold@skeeve.com>
+
+	Clean up some compiler warnings:
+
+	* array.c (do_delete): Cast for printf.
+	* builtin.c (do_bindtextdomain): Casts for const char *.
+	* io.c (rs1scan): Cast for indexing of array.
+	* re.c (add_char): Remove unused variables.
+
 Fri Dec 31 11:05:11 2010  Michal Jaegermann  <michal@harddata.com>
 
 	* awk.h (strncasecmpmbs): Change parameters to const char *.
